<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackish"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hangman.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="10dp"        
        android:background="@drawable/pressed_button"
        android:clickable="true"
        android:onClick="easy_button"
        android:text="@string/easy_title" 
        android:textColor="@color/white"
        android:typeface="serif"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/pressed_button"
        android:clickable="true"
        android:onClick="medium_button"
        android:text="@string/medium_title"
        android:textColor="@color/white"
        android:typeface="serif" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/pressed_button"
        android:clickable="true"
        android:onClick="difficult_button"
        android:text="@string/difficult_title"
        android:textColor="@color/white"
        android:typeface="serif" />

</LinearLayout>