<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackish"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hangman.WinActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="178dp"
        android:text="@string/win_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:typeface="serif" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:background="@drawable/pressed_button"
        android:clickable="true"
        android:onClick="again_button"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:typeface="serif" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="18dp"
        android:background="@drawable/pressed_button"
        android:clickable="true"
        android:onClick="next_button"
        android:text="@string/next_level"
        android:textColor="@color/white"
        android:typeface="serif" />

</RelativeLayout>
